fix images on iphones

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -435,14 +435,13 @@
 
     .footer_nav_items > a {
       font-family: "Comfortaa";
-      margin: 1.5vw;
-      font-size: 4vw;
+      font-size: 12px;
       color: #FFF;
+      margin: auto !important;
     }
 
     .footer_nav_items {
-      margin: 0;
-      padding: 0;
+      margin: auto !important;
     }
 
     .footer_nav_items > a:hover {
